Tue Sep 01 19:00:00 2009  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* various files: Remove the (currently unused) reduction evaluation code.

Sun Aug 30 22:00:00 2009  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* eval.c/.h, rollout.c/.h, cache.c/.h, multithread.c: Try to speed up single threaded code
	in multi-threaded build.

Sat Aug 22 22:50:38 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, format.c, gnubg.c, gtkgame.c, rollout.c,
	set.c: Simplify stop on jsd by just having one option.

Sat Aug 22 22:40:22 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: silence unknown keyword error during load of rc files

Fri Aug 21 23:02:38 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* play.c: fix problems with storing computer cube evals

Fri Aug 21 18:22:55 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: check for et == EVAL_NONE before displaying skills

Fri Aug 14 21:05:09 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* dbprovider.c: width has size of size_t, which is different from int
	on 64 bit platforms causing crash on db lookup

Tue Aug 11 22:45:52 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* analysis.c, backgammon.h, commands.inc, gnubg.c, gtkgame.c, set.c,
	show.c: Remove set analysis move limit. Didn't do any good.

Mon Aug 10 21:15:32 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* eval.c: more or less revert to a cleaned up version of
	FindBestMoveInEval, but declare pm a volatile pointer.

Sat Aug  8 20:07:51 CEST 2009 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: hint didn't annotate MOVE_DROP

Sat Aug  8 14:42:20 CEST 2009 Christian Anthon <anthon@kiku.dk>

	*  eval.c: clean up the prune evaluation function (FindBestMoveInEval)
	and circumvent a compiler bug causing invalid prune evaluation on
	certain systems using gcc compiler optimization. This is a critical
	function and should be optimized further if possible.

Thu Aug  6 10:44:28 CEST 2009 Christian Anthon <anthon@kiku.dk>
